# kali-kalihim-legacy

./: .firebaserc  .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js
.firebase/: hosting.YnVpbGQ.cache
.firebase/kali-kalihim/functions/: index.js  manifest.js  package-lock.json  package.json  server.js
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
my-package/: Cargo.toml  README.md
my-package/src/: lib.rs
my-package/src/battle_cards/: battle_card.rs  mod.rs  models.rs
src/: app.d.ts  app.html  app.postcss  hooks.server.ts  theme.postcss
src/assets/icons/: Bell.svelte  index.ts
src/assets/images/: index.ts
src/components/: Navbar.svelte  index.ts
src/lib/: constants.ts  cookie.ts  data.ts  default.ts  store.ts  types.d.ts  types.ts
src/lib/components/: ActivatePowerCard.svelte  Navbar.svelte  PowerCard.svelte  Sidebar.svelte  index.ts
src/lib/firebase/: auth.ts  firebase.ts
src/lib/pkg/: my_package.d.ts  my_package.js  my_package_bg.js  my_package_bg.wasm  my_package_bg.wasm.d.ts
src/lib/utils/: battlecards.ts  functions.ts  powerCards.ts  update.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
src/routes/battle/: +page.server.ts  +page.svelte
src/routes/guide/: +page.svelte
src/routes/leaderboards/: +layout.server.ts  +layout.svelte  +layout.ts  +page.server.ts  +page.svelte
src/routes/logout/: +page.server.ts  +server.ts
src/routes/register/: +page.server.ts  +page.svelte
src/routes/users/: +page.svelte
(+135 files in other folders)
