[package]
name = "my-package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
image = "0.24.6"
rand = "0.8.5"
serde = { version = "^1.0.103", features = ["derive"] }
serde_json = "1.0.104"
gloo-utils = "0.1.7"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true
